--- a/templates/collection.html.twig
+++ b/templates/collection.html.twig
@@ -73,7 +73,7 @@
     </div>
     
     <script>
-        function loadImageContainer(image){
+        function loadImageCard(image){
             let {url,imageId,prompt} = image;
             let p= document.getElementById("collectionContainer");
             let imageContainerElem= `
@@ -83,25 +83,42 @@
                     <p class="font-extralight overflow-y-auto scrollbar overflow-ellipsis break-words h-10 w-64 text-center prompt mb-12 " 
                         >${prompt}</p>
                         <button data-collection-id-param=${imageId} data-collection-parent-param=${"image"+imageId} data-action="collection#deleteImage"
-                            class="bg-red-600 text-white py-2 px-4 w-64 h-10 hover:scale-90 transition-all duration-200 rounded-md absolute bottom-4 ">
+                            class="bg-red-600 text-white py-2 px-4 w-64 h-10 hover:scale-90 transition-all duration-200 rounded-md absolute bottom-4 
+                            bg-gradient-to-tr from-red-500 to-red-600 ">
                             Delete
                         </button>
                 </div>            
             `;
             p.insertAdjacentHTML( 'beforeend', imageContainerElem );
         }
-        
-        window.onload= function(){            // to verify if user is logged in 
+        function loadCollection(res,requestOptions,supabaseUrl){
+            fetch(supabaseUrl+"/rest/v1/Image?select=prompt,url,imageId&order=createdAt.desc&userId=eq."+res.userId, requestOptions)
+                .then(imgResponse => imgResponse.json())
+                .then(imgRes => {
+                    console.log(imgRes);
+                    document.getElementById("numOfPhotos").innerHTML=imgRes.length;
+                    for (let a=0;a<imgRes.length;a++){
+                        loadImageCard(imgRes[a]);
+                    }
+
+                })
+                .catch(error => {console.log('error', error);
+                    window.location.href= "/404?apiURL=/collection&apiName=Collection";
+                });
+        }
+        function ifLoggedIn(json){
             const authToken = sessionStorage.getItem("authToken");
             const expirationDate= sessionStorage.getItem("expirationDate");
 
             console.log(authToken === null,authToken,"\n",(expirationDate === null),expirationDate);
             if (authToken === null || expirationDate === null ){
 				window.location.href= "/login" ;                
-                return }
+                return 
+            }
             var myHeaders = new Headers();
-            myHeaders.append("apikey", "KEYFORSUPA");
-            myHeaders.append("Authorization", "Bearer KEYFORSUPA");
+            const {supabaseKey,supabaseUrl} = json;
+            myHeaders.append("apikey", supabaseKey);
+            myHeaders.append("Authorization", "Bearer "+supabaseKey);
 
             var requestOptions = {
                 method: 'GET',
@@ -109,100 +126,43 @@
                 redirect: 'follow'
             };
 
-            fetch("URLFORSUPA/rest/v1/User?select=tokenExpirationDate,authToken,username,userId,role&authToken=eq."+authToken, requestOptions)
+            fetch(supabaseUrl+"/rest/v1/User?select=tokenExpirationDate,authToken,username,userId,role&authToken=eq."+authToken, requestOptions)
                 .then(response => response.text())
                 .then(result => {
                     const res= JSON.parse(result)[0];
-                    console.log(res);
-                    console.log(res.authToken == authToken, res.authToken, authToken)
-                    console.log(new Date()<new Date(expirationDate), new Date(), expirationDate);
-                    if (res.authToken === authToken && new Date() < new Date(expirationDate)){
-                        console.log("already logged in");  
-                        document.getElementById("loggedUsername").innerHTML=res.username;
-                        
-                        fetch("URLFORSUPA/rest/v1/Image?select=prompt,url,imageId&userId=eq."+res.userId, requestOptions)
-                            .then(imgResponse => imgResponse.json())
-                            .then(imgRes => {
-                                console.log(imgRes);
-                                document.getElementById("numOfPhotos").innerHTML=imgRes.length;
-                                for (let a=0;a<imgRes.length;a++){
-                                    loadImageContainer(imgRes[a]);
-                                }
-
-                            })
-                            .catch(imgError => console.log('error', imgError));
-                        if (res.role === "Member") return 
-                        document.getElementById("admin").classList.remove("hidden");
-                    }else {
+                    //console.log(res);
+                    //console.log(res.authToken == authToken, res.authToken, authToken)
+                    //console.log(new Date()<new Date(expirationDate), new Date(), expirationDate);
+                    const currentDate= new Date();
+                    if(!(res.authToken === authToken && new Date() < new Date(expirationDate))){
                         window.location.href= "/login";
+                        return
                     }
+                    //console.log("already logged in");  
+                    document.getElementById("loggedUsername").innerHTML=res.username;
+
+                    loadCollection(res,requestOptions,supabaseUrl);
+                    
+
+                    if (res.role === "ADMIN") document.getElementById("admin").classList.remove("hidden");
                     
                 })
-                .catch(error => console.log('error', error));
+                .catch(error => {console.log('error', error);
+                    window.location.href= "/404?apiURL=/collection&apiName=Collection";
+                });
 
+        }
+        window.onload= function(){
+            fetch("./secrets.json")
+            .then((res)=> res.json())
+            .then((json)=>{
+                ifLoggedIn(json);
+            })
+            .catch(error =>{
+                console.log('error reading JS', error);
+                window.location.href= "/404";
+            });
         }
     </script>
-    {# <script>
-        function loadImage(){
-
-        }
-        // to verify if user is logged in 
-        window.onload= function(){            
-            const authToken = sessionStorage.getItem("authToken");
-            const expirationDate= sessionStorage.getItem("expirationDate");
-
-            console.log(authToken === null,authToken,"\n",(expirationDate === null),expirationDate);
-            if (authToken === null || expirationDate === null ){
-				window.location.href= "/login" ;                
-                return }
-            var myHeaders = new Headers();
-            myHeaders.append("apikey", "KEYFORSUPA");
-            myHeaders.append("Authorization", "Bearer KEYFORSUPA");
-
-            var requestOptions = {
-                method: 'GET',
-                headers: myHeaders,
-                redirect: 'follow'
-            };
-
-            fetch("URLFORSUPA/rest/v1/User?select=tokenExpirationDate,authToken,username,userId,role&authToken=eq."+authToken, requestOptions)
-                .then(response => response.text())
-                .then(result => {
-                    const res= JSON.parse(result)[0];
-                    console.log(res);
-                    console.log(res.authToken == authToken, res.authToken, authToken)
-                    console.log(new Date()<new Date(expirationDate), new Date(), expirationDate);
-                    if (res.authToken === authToken && new Date() < new Date(expirationDate)){
-                        console.log("already logged in");  
-                        document.getElementById("loggedUsername").innerHTML=res.username;
-                        
-                        fetch("URLFORSUPA/rest/v1/Image?select=prompt,url&userId=eq."+res.userId, requestOptions)
-                            .then(imgResponse => imgResponse.json())
-                            .then(imgRes => {
-                                console.log(imgRes);
-                                const posts = document.querySelectorAll(".post");
-                                const images = document.querySelectorAll(".image");
-                                const prompts = document.querySelectorAll(".prompt");
-                                for (let a = 0;a<imgRes.length;a++){
-                                    posts[a].classList.add("flex");
-                                    posts[a].classList.remove("hidden");
-                                    console.log(posts[a].classList);
-                                    images[a].setAttribute("src",imgRes[a].url);
-                                    prompts[a].innerHTML= imgRes[a].prompt;
-                                }
-
-                            })
-                            .catch(imgError => console.log('error', imgError));
-                        if (res.role === "Member") return 
-                        document.getElementById("admin").classList.remove("hidden");
-                    }else {
-                        window.location.href= "/login";
-                    }
-                    
-                })
-                .catch(error => console.log('error', error));
-
-        }
-    </script> #}
 </body>
 </html>
