Feat: added resolution support

--- a/templates/error.html.twig
+++ b/templates/error.html.twig
@@ -4,7 +4,7 @@
     {% block stylesheets %}
         {{ encore_entry_link_tags('app') }}
     {% endblock %}
-    <title>Tryouts! </title>
+    <title>404 </title>
     <link rel="icon" type="image/x-icon" href="https://cdn.discordapp.com/attachments/869334941337546782/1036327824862220378/Method_Draw_Image.png">
 </head>
 <body>
